Moved all IP-address related options from the Edit Virtual Server page to the Change IP Address page, where they fit in better and are easier to understand.
Added a server template option to not change the MySQL username when a domain's administration username is changed, and fixed bugs with a similar option for the MySQL password.
The database username and password for a domain can now be changed using the new API commands modify-database-user and modify-database-pass.
When Virtualmin sends a backup to an SSH or FTP destination, it now also creates a .info file that contains meta-infomation about each backup. When restoring only this file needs to be downloaded to list the contents of a backup, which avoids the need to download the complete backup twice.
Added links to the Manage SSL Certificate page to download the key in PEM or PKCS12 format.
DKIM signing of outgoing email can now be enabled on the new DomainKeys Identified Mail page. This also configures verification of signatures on incoming email.
New virtual servers with an SSL website and status monitoring enabled will now also have the expiry date of their SSL certificate checked, to give advance warning when a cert is about to expire.
Added an Italian translation, thanks to Andrea Di Mario.
---- Changes since 3.81 ----
Added a template option to specify file types to not perform variable substitution on when copying from the /etc/skel directory.
Updated the Trac script installer to version 0.12.1, Instiki to 0.19.1, Rails to 3.0.1, and TWiki to 5.0.1.
Virtual server backups can now be to multiple destinations, both local and remote. The time-consuming process of compressing each domain is done only once, and the resulting file then transferred to each destination.
The maximum message size to check for spam can now be set even when regular spamassassin is used, as well as when using spamc.