@@ -1255,3 +1255,4 @@ Added a template option to specify file types to not perform variable substituti
 Updated the Trac script installer to version 0.12.1, Instiki to 0.19.1, Rails to 3.0.1, and TWiki to 5.0.1.
 Virtual server backups can now be to multiple destinations, both local and remote. The time-consuming process of compressing each domain is done only once, and the resulting file then transferred to each destination.
 The maximum message size to check for spam can now be set even when regular spamassassin is used, as well as when using spamc.
+When Webalizer is enabled for a domain, allowed users for the /stats URL path can now be edited on the Protected Web Directories page.
